--- a/Homework 1/homework1.html
+++ b/Homework 1/homework1.html
@@ -1,1 +1,25 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <title>starter code</title>
+<link rel="stylesheet" type="text/css" href="site.css">
+</head>
+<body>
+<h2>starter project</h2>
+<ul>
+    <li></li>
+    <li></li>
+    <li></li>
+</ul>
+ <button onclick="transformWords()">Transform Words</button>
+<ul>
+    <li></li>
+    <li></li>
+    <li></li>
+</ul>
+ <button onclick="transformWords()">Transform Words</button>
+<script src="main.js"></script>
+</body>
+</html>
