Updated html & started css

--- a/Homework 1/homework1.html
+++ b/Homework 1/homework1.html
@@ -7,19 +7,19 @@
 <link rel="stylesheet" type="text/css" href="site.css">
 </head>
 <body>
-<h2>starter project</h2>
+<h2>Starter Project</h2>
 <ul>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li><input type="text" id="myTextBox" name="myTextBox" placeholder="Enter text here"></li>
+    <li><input type="text" id="myTextBox" name="myTextBox" placeholder="Enter text here"></li>
+    <li><input type="text" id="myTextBox" name="myTextBox" placeholder="Enter text here"></li>
 </ul>
  <button onclick="transformWords()">Transform Words</button>
 <ul>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li><input type="text" id="myTextBox" name="myTextBox" placeholder="Enter text here"></li>
+    <li><input type="text" id="myTextBox" name="myTextBox" placeholder="Enter text here"></li>
+    <li><input type="text" id="myTextBox" name="myTextBox" placeholder="Enter text here"></li>
 </ul>
  <button onclick="transformWords()">Transform Words</button>
-<script src="main.js"></script>
+<script src="homework1.js"></script>
 </body>
 </html>
