Javascript and html should be all fixed up now, and I also added the css code.

--- a/Homework 1/homework1.html
+++ b/Homework 1/homework1.html
@@ -8,18 +8,18 @@
 </head>
 <body>
 <h2>Starter Project</h2>
-<ul>
-    <li><input type="text" id="myTextBox" name="myTextBox" placeholder="Enter text here"></li>
-    <li><input type="text" id="myTextBox" name="myTextBox" placeholder="Enter text here"></li>
-    <li><input type="text" id="myTextBox" name="myTextBox" placeholder="Enter text here"></li>
+<ul class="textbox1">
+    <li><input type="text" id="myTextBox" name="myTextBox1" placeholder="Enter text here"></li>
+    <li><input type="text" id="myTextBox" name="myTextBox2" placeholder="Enter text here"></li>
+    <li><input type="text" id="myTextBox" name="myTextBox3" placeholder="Enter text here"></li>
 </ul>
- <button onclick="transformWords()">Transform Words</button>
-<ul>
-    <li><input type="text" id="myTextBox" name="myTextBox" placeholder="Enter text here"></li>
-    <li><input type="text" id="myTextBox" name="myTextBox" placeholder="Enter text here"></li>
-    <li><input type="text" id="myTextBox" name="myTextBox" placeholder="Enter text here"></li>
+ <button type="button" hidden id="submitb">Transform Words</button>
+<ul class="textbox2">
+    <li><input type="text" id="myTextBox" name="myTextBox4" placeholder="Enter text here"></li>
+    <li><input type="text" id="myTextBox" name="myTextBox5" placeholder="Enter text here"></li>
+    <li><input type="text" id="myTextBox" name="myTextBox6" placeholder="Enter text here"></li>
 </ul>
- <button onclick="transformWords()">Transform Words</button>
+
 <script src="homework1.js"></script>
 </body>
 </html>
