made the textboxes appear and disappear as per the instructions.

--- a/Homework 1/homework1.html
+++ b/Homework 1/homework1.html
@@ -14,7 +14,7 @@
     <li><input type="text" id="myTextBox" name="myTextBox3" placeholder="Enter text here"></li>
 </ul>
  <button type="button" hidden id="submitb">Transform Words</button>
-<ul class="textbox2">
+<ul class="textbox2" hidden>
     <li><input type="text" id="myTextBox" name="myTextBox4" placeholder="Enter text here"></li>
     <li><input type="text" id="myTextBox" name="myTextBox5" placeholder="Enter text here"></li>
     <li><input type="text" id="myTextBox" name="myTextBox6" placeholder="Enter text here"></li>
