--- a/Homework 1/homework1.html
+++ b/Homework 1/homework1.html
@@ -1,23 +1,23 @@
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <title>starter code</title>
-<link rel="stylesheet" type="text/css" href="site.css">
+<link rel="stylesheet" type="text/css" href="homework1.css">
 </head>
 <body>
 <h2>Starter Project</h2>
 <ul class="textbox1">
-    <li><input type="text" id="myTextBox" name="myTextBox1" placeholder="Enter text here"></li>
-    <li><input type="text" id="myTextBox" name="myTextBox2" placeholder="Enter text here"></li>
-    <li><input type="text" id="myTextBox" name="myTextBox3" placeholder="Enter text here"></li>
+    <li><input type="text" id="myTextBox1" name="myTextBox1" placeholder="Enter text here"></li>
+    <li><input type="text" id="myTextBox2" name="myTextBox2" placeholder="Enter text here"></li>
+    <li><input type="text" id="myTextBox3" name="myTextBox3" placeholder="Enter text here"></li>
 </ul>
  <button type="button" hidden id="submitb">Transform Words</button>
 <ul class="textbox2" hidden>
-    <li><input type="text" id="myTextBox" name="myTextBox4" placeholder="Enter text here"></li>
-    <li><input type="text" id="myTextBox" name="myTextBox5" placeholder="Enter text here"></li>
-    <li><input type="text" id="myTextBox" name="myTextBox6" placeholder="Enter text here"></li>
+    <li><input type="text" id="myTextBox4" name="myTextBox4" placeholder="Enter text here"></li>
+    <li><input type="text" id="myTextBox5" name="myTextBox5" placeholder="Enter text here"></li>
+    <li><input type="text" id="myTextBox6" name="myTextBox6" placeholder="Enter text here"></li>
 </ul>
 
 <script src="homework1.js"></script>
